<resources>
    <string name="app_name" translatable="false">Ruhamaa</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="verify">Verify</string>
    <string name="ruhamaa_header_image_content_description">Ruhamaa header image</string>
    <string name="navigation_view_header_title">Ruhamaa</string>
    <string name="cases">Cases</string>
    <string name="content_icon">icon</string>
    <string name="content_icon_background">icon background</string>
    <string name="money_amount">%1$s \n pounds</string>
    <string name="remaining_money_amount">%1$s pounds remaining</string>
    <string name="case_list_fragment_label">Cases</string>
    <string name="logout">Logout</string>

    <string name="case_description_label">Description</string>
    <string name="donate_now">Donate now</string>
    <string name="ruhamaa_title">Ruhamaa</string>
    <string name="case_start_date">Start Date of campaign: 25/01/2020</string>
    <string name="balance">Balance</string>
    <string name="transactions">Transactions</string>
    <string name="wallet">Wallet</string>
    <string name="amount">Amount</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="transaction_number">Transaction Number</string>
    <string name="notes">Notes</string>
    <string name="deposit">Deposit</string>
    <string name="error_no_image_selected">No Image selected</string>
    <string name="image_removed">Attached Image removed</string>
    <string name="error_incomplete_fields">Please fill all the necessary fields</string>
    <string name="donation_successful">Doantion Successful!</string>
    <string name="ok">ok</string>
    <string name="donate">Donate</string>
    <string name="error_invalid_amount">Invalid amount</string>
    <string name="sudanese_pound">Sudanese Pound</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="current_balance">Current Balance:</string>
</resources>
